@@ -7,4 +7,4 @@ pub mod assert;
 pub mod ntoa;
 
 pub use assert::*;
-pub use ntoa::*;
+pub use ntoa::{MAX_PREFIX_LEN as NTOA_MAX_PREFIX_LEN, *};
