@@ -9,6 +9,9 @@
 #include <stddef.h>
 #include <string.h>
 
+#define VALID_LONG_PREFIX "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+#define TOO_LONG_PREFIX   "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+
 static const struct {
     const char *result;
     int base;
@@ -512,15 +515,21 @@ static const struct {
 
 static unsigned int assert_count_exp = 0;
 static unsigned int assert_count_ctr = 0;
+
 static const char *assert_last_file = NULL;
+static int assert_last_line = 0;
+static const char *assert_last_msg = NULL;
 
 static void assert_cb(
     const char *const file,
-    const int line __attribute__((unused)),
-    const char *const msg __attribute__((unused))
+    const int line,
+    const char *const msg
 ) {
     ++assert_count_ctr;
+
     assert_last_file = file;
+    assert_last_line = line;
+    assert_last_msg = msg;
 }
 
 static void test_utoa_assert(char *const buffer, const int base)
@@ -528,6 +537,12 @@ static void test_utoa_assert(char *const buffer, const int base)
     assert(kernaux_utoa(0, buffer, base, NULL) == NULL);
     assert(assert_count_ctr == ++assert_count_exp);
     assert(strstr(assert_last_file, "src/ntoa.c") != NULL);
+    assert(assert_last_line != 0);
+    assert(assert_last_msg != NULL);
+
+    assert_last_file = NULL;
+    assert_last_line = 0;
+    assert_last_msg = NULL;
 }
 
 static void test_itoa_assert(char *const buffer, const int base)
@@ -535,6 +550,12 @@ static void test_itoa_assert(char *const buffer, const int base)
     assert(kernaux_itoa(0, buffer, base, NULL) == NULL);
     assert(assert_count_ctr == ++assert_count_exp);
     assert(strstr(assert_last_file, "src/ntoa.c") != NULL);
+    assert(assert_last_line != 0);
+    assert(assert_last_msg != NULL);
+
+    assert_last_file = NULL;
+    assert_last_line = 0;
+    assert_last_msg = NULL;
 }
 
 static const char *str_end(const char *str)
@@ -547,7 +568,28 @@ int main()
     kernaux_assert_cb = assert_cb;
 
     {
-        char buffer[KERNAUX_UTOA_MIN_BUFFER_SIZE];
+        char buffer[KERNAUX_UTOA_MIN_BUFFER_SIZE + KERNAUX_NTOA_MAX_PREFIX_LEN];
+
+        const char *const end1 =
+            kernaux_utoa(123, buffer, 'd', VALID_LONG_PREFIX);
+        assert(strcmp(buffer, VALID_LONG_PREFIX"123") == 0);
+        assert(end1 == str_end(buffer));
+        assert(assert_count_ctr == assert_count_exp);
+        assert(assert_last_file == NULL);
+        assert(assert_last_line == 0);
+        assert(assert_last_msg == NULL);
+
+        const char *const end2 =
+            kernaux_utoa(123, buffer, 'd', TOO_LONG_PREFIX);
+        assert(strcmp(buffer, VALID_LONG_PREFIX) == 0);
+        assert(end2 == NULL);
+        assert(assert_count_ctr == ++assert_count_exp);
+        assert(strstr(assert_last_file, "src/ntoa.c") != NULL);
+        assert(assert_last_line != 0);
+        assert(strcmp(assert_last_msg, "prefix is too long") == 0);
+        assert_last_file = NULL;
+        assert_last_line = 0;
+        assert_last_msg = NULL;
 
         test_utoa_assert(NULL, 'd');
         test_utoa_assert(buffer, 0);
@@ -558,7 +600,28 @@ int main()
     }
 
     {
-        char buffer[KERNAUX_ITOA_MIN_BUFFER_SIZE];
+        char buffer[KERNAUX_ITOA_MIN_BUFFER_SIZE + KERNAUX_NTOA_MAX_PREFIX_LEN];
+
+        const char *const end1 =
+            kernaux_itoa(123, buffer, 'd', VALID_LONG_PREFIX);
+        assert(strcmp(buffer, VALID_LONG_PREFIX"123") == 0);
+        assert(end1 == str_end(buffer));
+        assert(assert_count_ctr == assert_count_exp);
+        assert(assert_last_file == NULL);
+        assert(assert_last_line == 0);
+        assert(assert_last_msg == NULL);
+
+        const char *const end2 =
+            kernaux_itoa(123, buffer, 'd', TOO_LONG_PREFIX);
+        assert(strcmp(buffer, VALID_LONG_PREFIX) == 0);
+        assert(end2 == NULL);
+        assert(assert_count_ctr == ++assert_count_exp);
+        assert(strstr(assert_last_file, "src/ntoa.c") != NULL);
+        assert(assert_last_line != 0);
+        assert(strcmp(assert_last_msg, "prefix is too long") == 0);
+        assert_last_file = NULL;
+        assert_last_line = 0;
+        assert_last_msg = NULL;
 
         test_itoa_assert(NULL, 'd');
         test_itoa_assert(buffer, 0);
